fix bug loading html template file