@@ -7,10 +7,11 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
@@ -20,6 +21,7 @@ import org.springframework.stereotype.Component;
 @RequiredArgsConstructor
 public class MailUtils {
   private final JavaMailSender mailSender;
+  private final ResourceLoader resourceLoader;
 
   @Value("${mail.path.register-verification-mail}")
   private String verificationMailPath;
@@ -50,7 +52,7 @@ public class MailUtils {
   }
 
   private String readFile(String verificationMailPath) throws IOException {
-    Path path = Paths.get(verificationMailPath);
-    return Files.readString(path, StandardCharsets.UTF_8);
+    Resource resource = resourceLoader.getResource(verificationMailPath);
+    return Files.readString(Path.of(resource.getURI()), StandardCharsets.UTF_8);
   }
 }
